facet-json2/tests/integration/read/snapshots/r#mod__integration__read__deny_unknown_and_default__deny_unknown_fields.snap
---
source: facet-json2/tests/integration/read/deny_unknown_and_default.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m:[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m}[0m
 [38;5;240m  │[0m [31m│[0m 
 [38;5;240m  │[0m [31m╰[0m[31m─[0m Unknown field: [31mbaz[39m for shape [33mStrictStruct[39m
[38;5;246m───╯[0m
