facet-json2/tests/integration/read/snapshots/r#mod__integration__read__deny_unknown_and_default__struct_with_missing_field.snap
---
source: facet-json2/tests/integration/read/deny_unknown_and_default.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m{[0m[38;5;249m"[0m[38;5;249mf[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249m"[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249me[0m[38;5;249mx[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249mp[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m"[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m1[0m[38;5;249m0[0m[38;5;249m0[0m[38;5;249m}[0m
 [38;5;240m  │[0m [31m│[0m 
 [38;5;240m  │[0m [31m╰[0m[31m─[0m Field 'ThreeField::baz' was not initialized
[38;5;246m───╯[0m
